--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react-swc": "^3.3.2",
