--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
+    "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
     "vite-plugin-svgr": "^3.2.0"
   },
