--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
@@ -20,7 +21,6 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "redux-persist": "^6.0.0",
-    "styled-component": "^2.8.0",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
