--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@mui/icons-material": "^5.14.6",
+    "@mui/material": "^5.14.6",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "prop-types": "^15.8.1",
@@ -31,5 +36,6 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "sass": "^1.66.1",
     "vite": "^4.4.5"
-  }
+  },
+  "proxy": "http://localhost:4000"
 }
