--- a/package.json
+++ b/package.json
@@ -42,5 +42,9 @@
     "sass": "^1.66.1",
     "vite": "^4.4.5"
   },
+  "peerDependencies": {
+    "react": "^17.0.0 || ^18.2.0",
+    "react-dom": "^17.0.0 || ^18.2.0"
+  },
   "proxy": "http://localhost:4000"
 }
