--- a/package.json
+++ b/package.json
@@ -13,10 +13,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/lab": "^4.0.0-alpha.61",
-    "@mui/icons-material": "^5.14.6",
     "@mui/material": "^5.14.6",
+    "@mui/styled-engine-sc": "^5.14.6",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "formik": "^2.4.3",
@@ -27,6 +25,7 @@
     "react-router-dom": "^6.15.0",
     "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.11",
     "vite-plugin-svgr": "^3.2.0",
     "yup": "^1.2.0"
   },
