--- a/package.json
+++ b/package.json
@@ -18,12 +18,18 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "formik": "^2.4.3",
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "modern-normalize": "^2.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.0",
+    "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
+    "react-select": "^5.7.4",
+    "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.11",
