--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-select": "^5.7.4",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
